# de-with-python

./: data.CSV  file.json  fromairflow.json  fromdb.csv  fromdf.csv  kill_all.py  partitioned_tables.py  pyproject.toml
airflow/: requirements.txt
airflow/dags/: dag_csv_json.py  dag_init.py  dag_pipeline_sql_elastic.py  dag_test_gcp_conn.py  level1.py  level3.py  level4.py  level5.py  level5_downstream.py  test_elastic_connection.py
airflow/include/: json_decode.py  regions_schema.json  stations_schema.json  trips_schema.json
elastic-start-local/: .env  start.sh
postgres/: docker-compose.yaml
src/: json_file.py  main.py  pandas_read.py  read_json_native.py  read_json_pandas.py
src/elastic/: elastic.py  scroll.py  serach.py
src/postgres/: connect_postgres.py  get_from_postgres.py  multiple_records.py  query_using_pandas.py
